data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1849.wast
;; 10. **Branching to Dynamic End Label**:    - A block containing intermediary branch instructions (`br`, `br_if`) targeting the dynamic end of the block, conditioned by runtime scenarios (stack values). Check final control flow resumes as expected at the various potential end points.    - **Constraint**: Dynamic branch targets require accurate resolution at runtime, ensuring it matches expected label endpoints.    - **Focus**: Ensures runtime condition-based branching correctly resumes execution at intended targets.

(assert_invalid
  (module (func $branch-to-dynamic-end
    (block (result i32)
      (br_if 0 (i32.const 1))
      (i32.const 2)
      (i32.add)
    )
  ))
  "type mismatch"
)